# loverace_app

./: .gitignore  README.md
Loverace_app/: .gitignore  (+2 more)
Loverace_app/services/core_api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
Loverace_app/services/core_api/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml
Loverace_app/services/core_api/scripts/: insert_vijendra_profile_sqlite.py  insert_vijendra_sqlite.py  insert_vijendra_sqlite_direct.py
Loverace_app/services/core_api/src/: config.py  database.py  deps.py  main.py
Loverace_app/services/core_api/src/models/: __init__.py  bond_progress.py  conversation.py  location.py  match.py  profile.py  settings.py  swipe.py  user.py
Loverace_app/services/core_api/src/routers/: auth.py  feed.py  location.py  matches.py  profiles.py  radar.py  swipes.py
Loverace_app/services/core_api/src/schemas/: auth.py  profile.py  radar.py  swipe.py
Loverace_app/services/core_api/src/services/: auth_service.py  profile_service.py  radar_service.py  swipe_service.py
Loverace_app/services/realtime_gateway/: .env.example  Dockerfile  pyproject.toml  requirements.txt
Loverace_app/services/realtime_gateway/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  secret.yaml
Loverace_app/services/realtime_gateway/src/: config.py  database.py  deps.py  main.py
Loverace_app/services/realtime_gateway/src/bond/: xp_engine.py
Loverace_app/services/realtime_gateway/src/handlers/: bond.py  chat.py  pg_listener.py  presence.py
Loverace_app/services/realtime_gateway/src/ws/: connection_manager.py
(+136 files in other folders)
